# sqlite

./: .gitignore  CMakeLists.txt  module.modulemap
sqlite.xcodeproj/: project.pbxproj
